--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <div class="btn_cnt">
                                 <img src="images/icon/icon-service.png">
                             </div>
-                            <p>在線客服</p>
+                            <p>Chăm sóc khách hàng</p>
                         </li>
                         <li class="btn_linear_c1">
                             <div class="btn_cnt">
@@ -61,13 +61,13 @@
                     <div data-signIn="0">
                         <div class="signIn_ipt">
                             <label>
-                                <span>帳號</span>
+                                <span>Tài khoản</span>
                                 <input type="text">
                             </label>
 
                             <div class="signIn_forget">
                                 <label>
-                                    <span>密碼</span>
+                                    <span>Mật khẩu</span>
                                     <input type="password">
                                 </label>
                                 <div class="btn_linear hd_forget" id="hd_forget">
@@ -77,7 +77,7 @@
 
                             <div class="signIn_code">
                                 <label>
-                                    <span>驗證碼</span>
+                                    <span>Mã xác minh</span>
                                     <input type="number">
                                 </label>
                                 <div class="nbCode">
@@ -87,10 +87,10 @@
 
                             <div class="signIn_btn">
                                 <div class="btn_linear_c2 btn" data-btn="signIn">
-                                    <div class="btn_cnt">登入</div>
+                                    <div class="btn_cnt">Đăng nhập</div>
                                 </div>
                                 <div class="btn_linear_c3 btn" data-btn="regd">
-                                    <div class="btn_cnt">註冊</div>
+                                    <div class="btn_cnt">Đăng kí</div>
                                 </div>
                             </div>
                         </div>
@@ -113,10 +113,10 @@
                         </div>
                         <div class="signIn_btn">
                             <div class="btn_linear_c2 btn" data-btn="signOut">
-                                <div class="btn_cnt">登出</div>
+                                <div class="btn_cnt">Đăng xuất</div>
                             </div>
                             <div class="btn_linear_c3 btn" data-btn="mbrMsg">
-                                <div class="btn_cnt">帳戶資料</div>
+                                <div class="btn_cnt">Thông tin tài khoản</div>
                             </div>
                         </div>
                     </div>
@@ -130,12 +130,12 @@
                 <li class="on">
                     <a href="#/home">TRANG CHỦ</a>
                 </li>
-                <li><a href="#/lottery">博彩推薦</a></a>
+                <li><a href="#/lottery">Đề xuất cá cược </a></a>
                 </li>
-                <li><a href="#/news">新聞</a></li>
-                <li><a href="#/broadcast">足球轉播</a></li>
-                <li><a href="#/forum">討論區</a></li>
-                <li><a href="#/resources">資源</a></li>
+                <li><a href="#/news">Tin tức</a></li>
+                <li><a href="#/broadcast">Video đá bóng</a></li>
+                <li><a href="#/forum">Diễn đàn thảo luận</a></li>
+                <li><a href="#/resources">Tài nguyên</a></li>
                 <li>
                     <a href="#/game">
                         <div class="menu_game">
@@ -173,14 +173,14 @@
             <div class="marquee">
                 <div class="marqueeBox">
                     <div>
-                        <span>最新消息：</span>
+                        <span>Tin mới nhất：</span>
                         <ul id="marquee" class="marquee_body">
                             <li>現在測試跑馬燈 (*´∀`)~ ♥</li>
                             <li>電子遊戲已開放，歡迎玩家點擊「SLOT GAME」進入遊戲，祝您遊戲愉快 (๑ơ ₃ ơ)♥</li>
                             <li>跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑，跑馬燈要乖乖不要亂跑 !!</li>
                         </ul>
                         <div class="btn_linear_c1 btn">
-                            <div class="btn_cnt">詳情</div>
+                            <div class="btn_cnt">Chi tiết</div>
                         </div>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
         <div class="ft_top">
             <div>
                 <div class="ft_msg">
-                    <p>在越南現場直播第一質量足球</p>
+                    <p>Truyền hình trực tiếp bóng đá chất lượng hàng đầu việt nam</p>
                     <p>TOP PRESTIGE BEAUTIFUL 100% </p>
                     <p>SUPER HIGH SUPER HOT SUPER HOT CAMERA</p>
                 </div>
@@ -287,12 +287,12 @@
                 <div class="ft_menu">
                     <ul>
                         <li><a href="#/home">TRANG CHỦ</a></li>
-                        <li><a href="#/lottery">博彩推薦</a></a>
+                        <li><a href="#/lottery">Đề xuất cá cược </a></a>
                         </li>
-                        <li><a href="#/news">新聞</a></li>
-                        <li><a href="#/broadcast">足球轉播</a></li>
-                        <li><a href="#/forum">討論區</a></li>
-                        <li><a href="#/resources">資源</a></li>
+                        <li><a href="#/news">Tin tức</a></li>
+                        <li><a href="#/broadcast">Video đá bóng</a></li>
+                        <li><a href="#/forum">Diễn đàn thảo luận</a></li>
+                        <li><a href="#/resources">Tài nguyên</a></li>
                     </ul>
                 </div>
             </div>
