--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
 </head>
 
 <body>
-    <!-- <a href="#/newsRef" class="newsRef" data-news="1">1</a>
-    <a href="#/newsRef" class="newsRef" data-news="2">2</a>
-    <a href="#/newsRef" class="newsRef" data-news="3">3</a>
-    <a href="#/newsRef" class="newsRef" data-news="4">4</a> -->
+    
+    <!-- 
+    新聞內頁跳頁(範例)
+    <a href="#/newsRef" class="newsRef" data-news="1">1</a>
+
+    博彩內頁跳頁(範例)
+    <a href="#/lotteryRef" class="lotteryRef" data-news="1">2</a> 
+    -->
+   
 
     <!-- ===== header start ===== -->
     <div class="header">
