--- a/newsRef/news_1.html
+++ b/newsRef/news_1.html
@@ -125,11 +125,11 @@
 
         <div class="newsRef_menu">
             <div class="newsRef_hot" id="newsRef_hot">
-                <div class="mainMsg-title">tin tức nóng</div>
+                <div class="mainMsg-title">Tin hot</div>
                 <ul></ul>
             </div>
             <div class="newsRef_imp" id="newsRef_imp">
-                <div class="mainMsg-title">Tin tức quan trọng</div>
+                <div class="mainMsg-title">Tin quan trọng</div>
                 <ul></ul>
             </div>
         </div>
