--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <a href="#/lotteryRef" class="lotteryRef" data-news="1">2</a> 
     -->
    
-
     <!-- ===== header start ===== -->
     <div class="header">
         <!-- hd_top start -->
@@ -43,7 +42,7 @@
                             <div class="btn_cnt">
                                 <img src="images/icon/icon-service.png">
                             </div>
-                            <p>Chăm sóc khách hàng</p>
+                            <p>CSKH</p>
                         </li>
                         <li class="btn_linear_c1">
                             <div class="btn_cnt">
@@ -65,15 +64,13 @@
                 <div class="hd_signIn" id="hd_signIn" data-signIn="0">
                     <div data-signIn="0">
                         <div class="signIn_ipt">
-                            <label>
-                                <span>Tài khoản</span>
-                                <input type="text">
+                            <label>  
+                                <input type="text" placeholder="Tài khoản">  
                             </label>
 
                             <div class="signIn_forget">
                                 <label>
-                                    <span>Mật khẩu</span>
-                                    <input type="password">
+                                    <input type="password" placeholder="Mật khẩu">
                                 </label>
                                 <div class="btn_linear hd_forget" id="hd_forget">
                                     <div class="btn_cnt"></div>
@@ -82,8 +79,7 @@
 
                             <div class="signIn_code">
                                 <label>
-                                    <span>Mã xác minh</span>
-                                    <input type="number">
+                                    <input type="number" placeholder="Xác minh">
                                 </label>
                                 <div class="nbCode">
                                     <img src="images/nbCode.jpg">
@@ -140,7 +136,7 @@
                 <li><a href="#/news">Tin tức</a></li>
                 <li><a href="#/broadcast">Video đá bóng</a></li>
                 <li><a href="#/forum">Diễn đàn thảo luận</a></li>
-                <li><a href="#/resources">Tài nguyên</a></li>
+                <li><a href="#/resources">Tin tức</a></li>
                 <li>
                     <a href="#/game">
                         <div class="menu_game">
@@ -297,7 +293,7 @@
                         <li><a href="#/news">Tin tức</a></li>
                         <li><a href="#/broadcast">Video đá bóng</a></li>
                         <li><a href="#/forum">Diễn đàn thảo luận</a></li>
-                        <li><a href="#/resources">Tài nguyên</a></li>
+                        <li><a href="#/resources">Tin tức</a></li>
                     </ul>
                 </div>
             </div>
