--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 <body>
     
-    <!-- 
-    新聞內頁跳頁(範例)
-    <a href="#/newsRef" class="newsRef" data-news="1">1</a>
+    
+    <!-- 新聞內頁跳頁(範例) -->
+    <!-- <a href="#/newsRef?p=1">1</a> -->
 
-    博彩內頁跳頁(範例)
-    <a href="#/lotteryRef" class="lotteryRef" data-news="1">2</a> 
-    -->
+    <!-- 博彩內頁跳頁(範例) -->
+    <!-- <a href="#/lotteryRef?p=1">1</a>  -->
+   
    
     <!-- ===== header start ===== -->
     <div class="header">
