--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     <!-- 內頁新聞跳頁(範例) -->
     <!-- <a href="#/news?p=1">news</a> -->
     <!-- 內頁博跳頁(範例) -->
-    <!-- <a href="#/lottery?p=1">lottery</a>  -->
+    <!-- <a href="#/lottery?p=1">lottery</a> -->
+    <!-- 內頁資源頁(範例) -->
+    <!-- <a href="#/resources?p=1">resources</a> -->
+
 
 
     <!-- ===== header start ===== -->
@@ -353,8 +356,6 @@
     let docRef = db.collection("showLive");
     let docRef2 = db.collection("ytMovie");
     var database = firebase.database().ref().limitToLast(50);
-
-    
 </script>
 
 </html>
