--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
                                 <div class="btn_cnt">Đăng xuất</div>
                             </div>
                             <div class="btn_linear_c3 btn" data-btn="mbrMsg">
-                                <div class="btn_cnt">Thông tin tài khoản</div>
+                                <div class="btn_cnt">
+                                    <a href="#/member"> Thông tin tài khoản</a>    
+                                </div>
                             </div>
                         </div>
                     </div>
