--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             </div>
                             <div class="btn_linear_c3 btn" data-btn="mbrMsg">
                                 <div class="btn_cnt">
-                                    <a href="#/member"> Thông tin tài khoản</a>    
+                                    <a href="#/member"> Thông tin tài khoản</a>
                                 </div>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                 <li><a href="#/news">Tin tức</a></li>
                 <li><a href="#/broadcast">Video đá bóng</a></li>
                 <li><a href="#/forum">Diễn đàn thảo luận</a></li>
-                <li><a href="#/resources">Tin tức</a></li>
+                <li><a href="#/resources">Thông tin</a></li>
                 <li>
                     <a href="#/game">
                         <div class="menu_game">
