--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             </div>
                             <div class="btn_linear_c3 btn" data-btn="mbrMsg">
                                 <div class="btn_cnt">
-                                    <a href="#/member"> Thông tin tài khoản</a>    
+                                    <a href="#/member"> Thông tin tài khoản</a>
                                 </div>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                 <div class="flexAd">
                     <ul>
                         <li>
-                            <img src="./images/adBanner/adBanner-01.jpg">
+                            <img src="./images/adBanner/ad1.gif">
                         </li>
                         <li>
                             <img src="./images/adBanner/adBanner-02.jpg">
