--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             <img src="./images/adBanner/ad1.gif">
                         </li>
                         <li>
-                            <img src="./images/adBanner/adBanner-02.jpg">
+                            <img src="./images/adBanner/ad2.gif">
                         </li>
                         <li>
                             <img src="./images/adBanner/adBanner-03.jpg">
