--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <div class="ftAd">
             <div>
                 <div class="ftAd_close"></div>
-                <img src="./images/adBanner/floatAd-05.jpg">
+                <img src="./images/adBanner/ad3.gif">
             </div>
             <div>
                 <div class="ftAd_close"></div>
@@ -323,7 +323,7 @@
             </div>
             <div>
                 <div class="ftAd_close"></div>
-                <img src="./images/adBanner/floatAd-06.jpg">
+                <img src="./images/adBanner/ad3.gif   ">
             </div>
         </div>
     </div>
@@ -381,10 +381,9 @@
     }
     mainVerify()
 
-    $('#mainVerify').click(function(){
+    $('#mainVerify').click(function() {
         mainVerify()
     })
-
 </script>
 
 </html>
