--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
             <div class="contBox-min">
                 <div class="leftTool" id="leftTool">
                     <div class="floatAd">
-                        <img src="images/adBanner/floatAd-01.jpg">
-                        <img src="images/adBanner/floatAd-02.jpg">
+                        <img src="images/adBanner/ad5.gif">
+                        <img src="images/adBanner/ad6.gif">
                     </div>
                     <div class="getGift" id="getGift">
                         <img src="images/gift.png">
@@ -319,11 +319,11 @@
             </div>
             <div>
                 <div class="ftAd_close"></div>
-                <img src="./images/adBanner/floatAd-07.jpg">
+                <img src="./images/adBanner/ad4.gif">
             </div>
             <div>
                 <div class="ftAd_close"></div>
-                <img src="./images/adBanner/ad3.gif   ">
+                <img src="./images/adBanner/ad3.gif">
             </div>
         </div>
     </div>
