--- a/lotteryRef/lotteryRef_3.html
+++ b/lotteryRef/lotteryRef_3.html
@@ -6,23 +6,26 @@
                 <div class="mainMsg-title">Tin tức</div>
                 <ul>
                     <li>
-                        <a href="#/lotteryRef?p=2" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef2_01.jpg);"></div>
+                        <a href="#/news?p=7" style="display: flex;">
+                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList7-01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
-                                    <div class="title">Kèo nhà cái: Nhận định trận đấu Anh vs Scotland</div>
-                                    <p>Cuộc đối đầu giữa Anh vs Scotland tại Vòng bảng EURO 2020 vào lúc 02h00 ngày 19/6 được ...</p>
+                                    <div class="title">Cách chơi trò chơi</div>
+                                    <p>Baccarat Baccarat là một trong các trò chơi trong Casino được nhiều chuyên gia cho rằng có nhiều khả năng thắng nhất đối với người chơi. Như các bạn cũng đ&</p>
                                 </div>
-                                <a href="#/lotteryRef?p=2">
-                                    <button class="moreBtn"><span>Read more »</span></button>
-                                </a>
-
+                                <div class="fullList_tool">
+                                    <div class="more">Cách chơi trò chơi</div>
+                                    <p>
+                                        <span>Tử điển xổ số</span>
+                                        <span>27-06 00:52</span>
+                                    </p>
+                                </div>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="#/lotteryRef?p=3" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef3_01.jpg);"></div>
+                        <a href="#/news?p=8" style="display: flex;">
+                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList8-01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
                                     <div class="title">Xổ số- cờ bạc hay trò chơi giải trí?</div>
@@ -39,8 +42,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#/lotteryRef?p=4" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef4_01.jpg);"></div>
+                        <a href="#/news?p=9" style="display: flex;">
+                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList9-01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
                                     <div class="title">Tình tiết mới vụ nhầm kết quả xổ số ở Hậu Giang: Giám đốc cty xổ số nói gì với quay phim?</div>
@@ -58,8 +61,8 @@
                     </li>
 
                     <li>
-                        <a href="#/lotteryRef?p=5" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef5_01.jpg);"></div>
+                        <a href="#/news?p=10" style="display: flex;">
+                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList10-01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
                                     <div class="title">Phá đường dây ghi lô đề hơn 15 tỷ</div>
@@ -77,8 +80,8 @@
                     </li>
 
                     <li>
-                        <a href="#/lotteryRef?p=6" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef6_01.jpg);"></div>
+                        <a href="#/news?p=11" style="display: flex;">
+                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList11-01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
                                     <div class="title">Người trúng thưởng xổ số được yêu cầu giữ bí mật thông tin</div>
@@ -96,8 +99,8 @@
                     </li>
 
                     <li>
-                        <a href="#/lotteryRef?p=7" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef7_01.jpg);"></div>
+                        <a href="#/news?p=12" style="display: flex;">
+                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList12-01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
                                     <div class="title">Mỹ tặng tiền, bia, mở xổ số 1 triệu USD cổ vũ dân tiêm vắc xin COVID-19</div>
@@ -114,8 +117,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#/lotteryRef?p=8" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef8_01.jpg);"></div>
+                        <a href="#/news?p=13" style="display: flex;">
+                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList13-01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
                                     <div class="title">Thu ngân sách từ thuế vẫn tăng mạnh bất chấp dịch bệnh</div>
@@ -133,8 +136,8 @@
                     </li>
 
                     <li>
-                        <a href="#/lotteryRef?p=9" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef9_01.jpg);"></div>
+                        <a href="#/news?p=14" style="display: flex;">
+                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList14-01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
                                     <div class="title">Vứt nhầm 12 tờ vé số trị giá 180 triệu, cả xóm lục tung thùng rác tìm giữa đêm khuya</div>
@@ -151,43 +154,7 @@
                         </a>
                     </li>
 
-                    <li>
-                        <a href="#/lotteryRef?p=10" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef10_01.jpg);"></div>
-                            <div class="fullList_msg">
-                                <div>
-                                    <div class="title">Vứt nhầm 12 tờ vé số trị giá 180 triệu, cả xóm lục tung thùng rác tìm giữa đêm khuya</div>
-                                    <p>Được biết, chiếc vé cuối cùng cũng đã chịu "xuất đầu lộ diện" trong một thùng rác ở góc phố!Mới đây, một xóm nhỏ tại huyện Thạnh Hóa (Long</p>
-                                </div>
-                                <div class="fullList_tool">
-                                    <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>06-06 21:48</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
 
-                    <li>
-                        <a href="#/lotteryRef?p=11" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef11_01.jpg);"></div>
-                            <div class="fullList_msg">
-                                <div>
-                                    <div class="title">Vứt nhầm 12 tờ vé số trị giá 180 triệu, cả xóm lục tung thùng rác tìm giữa đêm khuya</div>
-                                    <p>Được biết, chiếc vé cuối cùng cũng đã chịu "xuất đầu lộ diện" trong một thùng rác ở góc phố!Mới đây, một xóm nhỏ tại huyện Thạnh Hóa (Long</p>
-                                </div>
-                                <div class="fullList_tool">
-                                    <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>06-06 21:48</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
